--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,20 @@ authors = [
 requires-python = ">=3.13"
 dependencies = []
 
+[project.optional-dependencies]
+s3 = ["aioboto3>=15.4.0"]
+
 [tool.uv.build-backend]
 module-root = "src"
 module-name = "cloud_storage"
+
+[tool.pyright]
+reportMissingTypeStubs = "none"
+reportUnknownMemberType = "none"
+reportUnusedCallResult = "none"
+reportUnknownVariableType = "none"
+reportAny = "none"
+reportExplicitAny = "none"
 
 [build-system]
 requires = ["uv_build>=0.8.20,<0.9.0"]
