--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,13 @@ reportExplicitAny = "none"
 [build-system]
 requires = ["uv_build>=0.8.20,<0.9.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-aioboto3>=0.6.0",
+    "pytest-asyncio>=1.2.0",
+]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
