feat: sqlalchemy integration with tests (#2)
* feat: basic sqlalchemy type_decorator and proxy class

* test: add test cases for sqlalchemy integration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,11 @@ s3 = ["aioboto3>=15.4.0"]
 
 [dependency-groups]
 dev = [
+    "aiosqlite>=0.21.0",
     "pytest>=8.4.2",
     "pytest-aioboto3>=0.6.0",
     "pytest-asyncio>=1.2.0",
+    "sqlalchemy>=2.0.44",
 ]
 
 [tool.uv.build-backend]
