--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ build:
     python: "3.13"
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: docs/src/conf.py
 python:
   install:
     - requirements: docs/requirements.txt
