--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,10 @@ build:
 
 sphinx:
   configuration: docs/src/conf.py
+
 python:
   install:
-    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
