--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,10 @@ jobs:
       - name: Install Dependencies
         run: uv sync --locked --all-extras
 
-      - name: Run Pytest
-        run: uv run pytest
+      - name: Run Pytest and Coverage
+        run: uv run pytest --cov --cov-branch --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
