--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dev = [
     "pytest>=8.4.2",
     "pytest-aioboto3>=0.6.0",
     "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
     "sqlalchemy>=2.0.44",
 ]
 
