--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,16 @@ license = { text = "MIT" }
 authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
 requires-python = ">=3.12"
 dependencies = []
-
-[project.urls]
-Homepage = "https://github.com/stabldev/fastapi-async-storages"
-Repository = "https://github.com/stabldev/fastapi-async-storages"
-Documentation = "https://fastapi-async-storages.readthedocs.io"
-Changelog = "https://github.com/stabldev/fastapi-async-storages/releases"
-
-[project.classifiers] = [
+keywords = [
+  "fastapi",
+  "async",
+  "storage",
+  "cloud",
+  "s3",
+  "object-storage",
+  "backend"
+]
+classifiers = [
   "Development Status :: 4 - Beta",
   "Environment :: Web Environment",
   "Framework :: FastAPI",
@@ -30,6 +32,12 @@ Changelog = "https://github.com/stabldev/fastapi-async-storages/releases"
   "Topic :: Utilities",
   "Typing :: Typed"
 ]
+
+[project.urls]
+Homepage = "https://github.com/stabldev/fastapi-async-storages"
+Repository = "https://github.com/stabldev/fastapi-async-storages"
+Documentation = "https://fastapi-async-storages.readthedocs.io"
+Changelog = "https://github.com/stabldev/fastapi-async-storages/releases"
 
 [project.optional-dependencies]
 s3 = ["aioboto3>=15.4.0"]
